task-15/frontend-something-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-something-service
spec:
  selector:
    app: frontend-something
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
