task-15/frontend-something-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-something-ingress
spec:
  tls:
  - hosts:
    - zafar.nvrbckdown.uz
    secretName: abdulqodir-front-tls
  rules:
  - host: zafar.nvrbckdown.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-something-service
            port:
              number: 80
